--- a/style.css
+++ b/style.css
@@ -72,3 +72,111 @@ body{
     cursor: pointer;
 }
 
+
+@media screen and (max-width:700px) {
+    .container{
+        width: 500px;
+        height: 300px;
+    }
+    .inputs{
+        padding: 10px 0px;
+    }
+    .inputs label{
+        font-size: 15px;
+    }
+    .inputs input{
+        height: 80px;
+        width: 70px;
+        margin: 0px 15px;
+        font-size: 30px;
+    }
+    .icons i{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.471);
+        cursor: pointer;
+        transform: scale(0.90);
+    }
+}
+
+@media screen and (max-width:550px) {
+    .container{
+        width: 400px;
+        height: 300px;
+    }
+    .inputs{
+        padding: 8px 0px;
+    }
+    .inputs label{
+        font-size: 14px;
+    }
+    .inputs input{
+        height: 70px;
+        width: 60px;
+        margin: 0px 15px;
+        font-size: 25px;
+    }
+    .icons i{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.471);
+        cursor: pointer;
+        transform: scale(0.90);
+    }
+}
+
+@media screen and (max-width:450px) {
+    .container{
+        width: 300px;
+        height: 260px;
+    }
+    .inputs{
+        padding: 5px 0px;
+    }
+    .inputs label{
+        font-size: 12px;
+    }
+    .inputs input{
+        height: 60px;
+        width: 50px;
+        margin: 0px 10px;
+        font-size: 25px;
+    }
+    .icons i{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.471);
+        cursor: pointer;
+        transform: scale(0.90);
+    }
+}
+
+@media screen and (max-width:320px) {
+    .container{
+        width: 250px;
+        height: 220px;
+    }
+    .inputs{
+        padding: 0px 0px;
+    }
+    .inputs label{
+        font-size: 11px;
+    }
+    .inputs input{
+        height: 50px;
+        width: 40px;
+        margin: 0px 8px;
+        font-size: 20px;
+    }
+    .icons i{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.471);
+        cursor: pointer;
+        transform: scale(0.85);
+    }
+}
